--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   </head>
   <body>
     <div class="container">
-      <div id="windout">
-
+      <div id="windout"></div>
+      <div id="controls">
+        <input type="range">
       </div>
     </div>
   </body>
