--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <script type="text/javascript" src="assets/js/p5.min.js"></script>
   </head>
-  <body>
+  <body style="background-color:#EEE">
     <div class="container">
-      <div id="windout"></div>
-      <div id="controls">
-        <input type="range">
-      </div>
+      <div id="windout" style="background-color:#FFF"></div>
     </div>
   </body>
   <script type="text/javascript" src="assets/js/main.js"></script>
